--- a/LFS/lfsbookja-src/index.html
+++ b/LFS/lfsbookja-src/index.html
@@ -1,210 +1,170 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="ja">
+<html lang="en">
 <head>
-<meta name="Content-Language" content="ja">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta name="Content-Language" content="en">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Cache-Control" content="no-cache">
-<link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/sfx.net.css">
-<!--[if IE]><link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/iestyles.net.css"><![endif]-->
-<!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/ie6styles.net.css"><![endif]-->
-<link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/sf.jp.theme.css">
-<link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/print.css" media="print">
-<link rel="INDEX" href="http://sourceforge.jp/">
-<link rel="CONTENTS" href="http://sourceforge.jp/">
-<link rel="SHORTCUT ICON" href="http://static.sourceforge.jp/favicon.ico" type="image/x-icon">
-
-<link rel="stylesheet" type="text/css" href="http://static.sourceforge.jp/css/ticket.css">
-<link rel="alternate" title="Recent project news" href="http://sourceforge.jp/projects/lfsbookja/news/rss" type="application/rss+xml">
-<link rel="alternate" title="Recent release" href="http://sourceforge.jp/projects/lfsbookja/releases/rss" type="application/rss+xml">
-<link rel="alternate" title="Project wiki updates" href="http://sourceforge.jp/projects/lfsbookja/wiki/!feeds/diff" type="application/rss+xml">
-<link rel="alternate" title="Recent wiki page list" href="http://sourceforge.jp/projects/lfsbookja/wiki/!feeds/list" type="application/rss+xml">
-<link rel="alternate" title="Project History" href="http://sourceforge.jp/projects/lfsbookja/history/rss" type="application/rss+xml">
-<script language="JavaScript" type="text/javascript" src="http://static.sourceforge.jp/js/sfjp-adsense.js?t=1244785488"></script>
-
-<title>Project Web of LFSブック日本語版 on SourceForge.JP Web space</title>
+<title>Project Web of LFSbook in Japanese on SourceForge.JP Web space</title>
 </head>
 
 <body>
-<div align="center">
+<div align="left">
 <p>
-<span class="menu-item"><a href="index.html" alt="Japanese">日本語<span class="spclass-nontext spimg-ja"></span></a></span>
-<span class="menu-item"><a href="en.index.html" alt="English">English<span class="spclass-nontext spimg-en"></span></a></span>
+<span class="menu-item">English</span>
+|
+<span class="menu-item"><a href="ja.index.html" alt="Japanese">Japanese</a></span>
 </p>
 </div>
 
-  <div id="frame">
-    <div id="innerframe">
+<h1 align="center">LFSbook in Japanese <small>(lfsbookja)</small><br/><small>2023/11/25</small></h1>
+<div align="right">l f s b o o k j a&nbsp;&nbsp;&nbsp;AT&nbsp;&nbsp;&nbsp;g m a i l&nbsp;&nbsp;&nbsp;DOT&nbsp;&nbsp;&nbsp;c o m</div>
 
-      <h1 align="center">LFSブック日本語版 <small>(lfsbookja)</small><br/><small>2023/03/05</small></h1>
-      <ul id="breadcrumb">
-	<li class="begin"><a href="http://osdn.jp/">osdn.jp</a></li>
-	<li><a href="http://osdn.jp/softwaremap/">プロジェクト</a></li>
-	<li><a href="http://osdn.jp/projects/lfsbookja/">LFSブック日本語版</a></li>
+<h3>1. Contents</h3>
 
-      </ul> <!-- breadcrumb -->
+<p>This site provides LFSbook in Japanese.</p>
 
-<div class="ptop_blur ptop-ie-adhoc-fix">
-  <div class="ptop_shadow">
-    <div id="ptop_descriptions" class="ptop_box ptop_box_min">
-      <table class="ptop_screenshot">
-        <tr>
-            <td>
+<h4>1.1. Online</h4>
+
+<table border=0>
+
+<tr>
+<td>LFS 12.0</td><td>&nbsp;&nbsp;</td>
+<td>2023/09/01</td><td>&nbsp;&nbsp;</td>
+<td><a href="12.0-ja/index.html">HTML</a> /
+<a href="12.0-ja/lfsbookja-12.0.pdf">PDF</a> /
+<a href="12.0-ja/wget-list">wget-list</a> /
+<a href="12.0-ja/md5sums">md5sums</a></td>
+</tr>
+
+<tr>
+<td>LFS 12.0-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2023/09/01</td><td>&nbsp;&nbsp;</td>
+<td><a href="12.0-sysdja/index.html">HTML</a> /
+<a href="12.0-sysdja/lfssysdja-12.0.pdf">PDF</a> /
+<a href="12.0-sysdja/wget-list">wget-list</a> /
+<a href="12.0-sysdja/md5sums">md5sums</a></td>
+</tr>
+
+<tr>
+<td>LFS r12.0-97</td><td>&nbsp;&nbsp;</td>
+<td>2023/11/25</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="git-ja/index.html">HTML</a> /
+<a href="git-ja/lfsbookja-git.pdf">PDF</a> /
+<a href="git-ja/wget-list">wget-list</a> /
+<a href="git-ja/md5sums">md5sums</a></td>
+</tr>
+
+<tr>
+<td>LFS r12.0-97-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2023/11/25</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="git-sysdja/index.html">HTML</a> /
+<a href="git-sysdja/lfssysdja-git.pdf">PDF</a> /
+<a href="git-sysdja/wget-list">wget-list</a> /
+<a href="git-sysdja/md5sums">md5sums</a></td>
+</tr>
+
+</table>
+<h4>1.2. Download</h4>
+
+<table border=0>
+<tr>
+<td>LFS 12.0</td><td>&nbsp;&nbsp;</td>
+<td>2023/09/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="download/lfsbookja-12.0-html.tar.bz2"><tt>lfsbookja-12.0-html.tar.bz2</tt> (chunk version)</a>
+</td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfsbookja-12.0-nochunks.html.bz2"><tt>lfsbookja-12.0-nochunks.html.bz2</tt> (nochunk version)</a></td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfsbookja-12.0.txt.bz2"><tt>lfsbookja-12.0.txt.bz2</tt></a></td>
+</tr>
+<tr>
+<td>LFS 12.0-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2023/09/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="download/lfssysdja-12.0-html.tar.bz2"><tt>lfssysdja-12.0-html.tar.bz2</tt> (chunk version)</a>
+</td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfssysdja-12.0-nochunks.html.bz2"><tt>lfssysdja-12.0-nochunks.html.bz2</tt> (nochunk version)</a></td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfssysdja-12.0.txt.bz2"><tt>lfssysdja-12.0.txt.bz2</tt></a></td>
+</tr>
+
+<tr>
+<td>LFS r12.0-97</td><td>&nbsp;&nbsp;</td>
+<td>2023/11/25</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="download/lfsbookja-git-html.tar.bz2"><tt>lfsbookja-git-html.tar.bz2</tt> (chunk version)</a>
+</td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfsbookja-git-nochunks.html.bz2"><tt>lfsbookja-git-nochunks.html.bz2</tt> (nochunk version)</a></td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfsbookja-git.txt.bz2"><tt>lfsbookja-git.txt.bz2</tt></a></td>
+</tr>
+
+<tr>
+<td>LFS r12.0-97-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2023/11/25</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="download/lfssysdja-git-html.tar.bz2"><tt>lfssysdja-git-html.tar.bz2</tt> (chunk version)</a>
+</td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfssysdja-git-nochunks.html.bz2"><tt>lfssysdja-git-nochunks.html.bz2</tt> (nochunk version)</a></td>
+</tr>
+<tr>
+<td></td><td>&nbsp;&nbsp;</td>
+<td></td><td>&nbsp;&nbsp;</td>
+<td><a href="download/lfssysdja-git.txt.bz2"><tt>lfssysdja-git.txt.bz2</tt></a></td>
+</tr>
+
+</table>
 <!--
-<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja"
-data-text="#lfsbookja" data-url="http://bit.ly/A9kNOV" data-counturl="http://lfsbookja.osdn.jp/">ツイート</a>
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
--->
-            </td>
-
-          <td align="right">
-            <div class="sfjp_button">
-              <a class="push_button" href="https://ja.osdn.net/projects/lfsbookja/devel/">
-                <strong>開発者向けページ</strong>
-                <img src="http://static.sourceforge.jp/crystal/24x24/apps/agt_home.png" border="0" alt="" width="24" height="24">
-              </a>
-            </div>
-          </td>
-
-        </tr>
-      <table>
-    </div>
-  </div>
-</div>
-
-<h3>1.内容</h3>
-
-<p>LFS (Linux From Scratch) ブックの日本語版を提供します。</p>
-
-<ul>
-<li>"LFS 11.3" は安定版 (stable版)です。安定版は半年に１回リリースされます。次回の更新予定は 2023/09/01 です。</li>
-<li>"LFS 11.3-systemd" は、システム起動に sysvinit でなく systemd を用いている systemd 版 です。</li>
-<li>"LFS r11.3-nnn" は開発版 (develop版) です。直近の安定版から逐次開発更新される最新版です。</li>
-<li>"LFS r11.3-nnn-systemd" は systemd 開発版 です。</li>
-</ul>
-
-<h4>1.1. オンライン参照</h4>
+<h4>1.3. Older Versions</h4>
 
 <table border=0>
+
 <tr>
 <td>LFS 11.3</td><td>&nbsp;&nbsp;</td>
 <td>2023/03/02</td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/11.3-ja/">HTML</a> /
+<td>
+<a href="http://lfsbookja.osdn.jp/11.3-ja/">HTML</a> /
 <a href="http://lfsbookja.osdn.jp/11.3-ja/lfsbookja-11.3.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/11.3-ja/wget-list">wget-list</a> /
-<a href="http://lfsbookja.osdn.jp/11.3-ja/md5sums">md5sums</a></td>
+<a href="http://lfsbookja.osdn.jp/lfsbookja-11.3-html.tar.bz2"><tt>lfsbookja-11.3-html.tar.bz2</tt></a> /
+<a href="http://lfsbookja.osdn.jp/lfsbookja-11.3.txt.bz2"><tt>lfsbookja-11.3.txt.bz2</tt></a>
+</td>
 </tr>
+
 <tr>
 <td>LFS 11.3-systemd</td><td>&nbsp;&nbsp;</td>
 <td>2023/03/02</td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/11.3-sysdja/">HTML</a> /
+<td>
+<a href="http://lfsbookja.osdn.jp/11.3-sysdja/">HTML</a> /
 <a href="http://lfsbookja.osdn.jp/11.3-sysdja/lfssysdja-11.3.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/11.3-sysdja/wget-list">wget-list</a> /
-<a href="http://lfsbookja.osdn.jp/11.3-sysdja/md5sums">md5sums</a></td>
-</tr>
-<tr>
-<td>LFS r11.3-13</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/05</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/git-ja/">HTML</a> /
-<a href="http://lfsbookja.osdn.jp/git-ja/lfsbookja-git.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/git-ja/wget-list">wget-list</a> /
-<a href="http://lfsbookja.osdn.jp/git-ja/md5sums">md5sums</a></td>
-</tr>
-
-<tr>
-<td>LFS r11.3-13-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/05</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/git-sysdja/">HTML</a> /
-<a href="http://lfsbookja.osdn.jp/git-sysdja/lfssysdja-git.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/git-sysdja/wget-list">wget-list</a> /
-<a href="http://lfsbookja.osdn.jp/git-sysdja/md5sums">md5sums</a></td>
-</tr>
-
-</table>
-
-<h4>1.2. ダウンロード</h4>
-
-<table border=0>
-<tr>
-<td>LFS 11.3</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/02</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/lfsbookja-11.3-html.tar.bz2"><tt>lfsbookja-11.3-html.tar.bz2</tt> (chunk 版)</a>
+<a href="http://lfsbookja.osdn.jp/lfssysdja-11.3-html.tar.bz2"><tt>lfssysdja-11.3-html.tar.bz2</tt></a> /
+<a href="http://lfsbookja.osdn.jp/lfssysdja-11.3.txt.bz2"><tt>lfssysdja-11.3.txt.bz2</tt></a>
 </td>
 </tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfsbookja-11.3-nochunks.html.bz2"><tt>lfsbookja-11.3-nochunks.html.bz2</tt> (nochunk 版)</a></td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfsbookja-11.3.txt.bz2"><tt>lfsbookja-11.3.txt.bz2</tt></a></td>
-</tr>
-<tr>
-<td>LFS 11.3-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/02</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/lfssysdja-11.3-html.tar.bz2"><tt>lfssysdja-11.3-html.tar.bz2</tt> (chunk 版)</a>
-</td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfssysdja-11.3-nochunks.html.bz2"><tt>lfssysdja-11.3-nochunks.html.bz2</tt> (nochunk 版)</a></td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfssysdja-11.3.txt.bz2"><tt>lfssysdja-11.3.txt.bz2</tt></a></td>
-</tr>
-
-<tr>
-<td>LFS r11.3-13</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/05</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/lfsbookja-git-html.tar.bz2"><tt>lfsbookja-git-html.tar.bz2</tt> (chunk 版)</a>
-</td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfsbookja-git-nochunks.html.bz2"><tt>lfsbookja-git-nochunks.html.bz2</tt> (nochunk 版)</a></td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfsbookja-git.txt.bz2"><tt>lfsbookja-git.txt.bz2</tt></a></td>
-</tr>
-
-<tr>
-<td>LFS r11.3-13-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2023/03/05</td><td>&nbsp;&nbsp;</td>
-<td>
-<a href="http://lfsbookja.osdn.jp/lfssysdja-git-html.tar.bz2"><tt>lfssysdja-git-html.tar.bz2</tt> (chunk 版)</a>
-</td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfssysdja-git-nochunks.html.bz2"><tt>lfssysdja-git-nochunks.html.bz2</tt> (nochunk 版)</a></td>
-</tr>
-<tr>
-<td></td><td>&nbsp;&nbsp;</td>
-<td></td><td>&nbsp;&nbsp;</td>
-<td><a href="http://lfsbookja.osdn.jp/lfssysdja-git.txt.bz2"><tt>lfssysdja-git.txt.bz2</tt></a></td>
-</tr>
-
-</table>
-
-<h4>1.3. 過去のバージョン</h4>
-
-<table border=0>
 
 <tr>
 <td>LFS 11.2</td><td>&nbsp;&nbsp;</td>
@@ -480,6 +440,7 @@ data-text="#lfsbookja" data-url="http://bit.ly/A9kNOV" data-counturl="http://lfs
 <a href="http://lfsbookja.osdn.jp/lfsbookja-7.10.txt.bz2"><tt>lfsbookja-7.10.txt.bz2</tt></a>
 </td>
 </tr>
+
 <tr>
 <td>LFS 7.10-systemd</td><td>&nbsp;&nbsp;</td>
 <td>2016/09/08</td><td>&nbsp;&nbsp;</td>
@@ -627,31 +588,17 @@ data-text="#lfsbookja" data-url="http://bit.ly/A9kNOV" data-counturl="http://lfs
 </td>
 </tr>
 </table>
-
-<h3>2.リンク</h3>
+-->
+<h3>2. Links</h3>
 <ul>
-<li>本家: <a href="http://www.linuxfromscratch.org/">Linux From Scratch</a></li>
-<li>osdn.jp: <a href="http://osdn.jp/projects/lfsbookja/">本サイト一般向けページ（概要ページ）</a></li>
-<li>osdn.jp: <a href="http://osdn.jp/projects/lfsbookja/devel/">本サイト開発者向けページ（開発ダッシュボード）</a></li>
-<li>暫定公開： BLFSブック日本語版<br/>
-<table border=0>
-<tr>
- <td>2021/10/21</td><td>&nbsp;&nbsp;</td>
- <td><a href="http://lfsbookja.osdn.jp/BLFS/git-ja/">BLFS (System V) Version r11.0-201</a></td><td>&nbsp;&nbsp;</td>
-</tr>
-<tr>
- <td>2021/10/21</td><td>&nbsp;&nbsp;</td>
- <td><a href="http://lfsbookja.osdn.jp/BLFS/git-sysdja/">BLFS (Systemd) Version r11.0-201</a></td><td>&nbsp;&nbsp;</td>
-</tr>
-</table>
+<li>Upstream: <a href="http://www.linuxfromscratch.org/">Linux From Scratch</a></li>
+<li>GitHub: </li>
+<ul>
+<li><a href="https://github.com/lfsbookja">lfsbookja</a>, main account</li>
+<li><a href="https://github.com/lfsbookja/lfsbookja-doc">lfsbookja-doc</a> for document</li>
+<li><a href="https://github.com/lfsbookja/lfsbookja-src">lfsbookja-src</a> for source</li>
 </ul>
-
-	<div>
-	  <a href="http://osdn.jp/">
-	    <img src="http://osdn.jp/sflogo.php?group_id=4567&type=3"
-		 width="210" height="63" border="0" alt="lfsbookja.osdn.jp">
-	  </a>
-	</div>
+</ul>
 
 </body>
 </html>
