--- a/LFS/LFS/lfsbookja-src/index.html
+++ b/LFS/LFS/lfsbookja-src/index.html
@@ -14,7 +14,7 @@
 </p>
 </div>
 
-<h1 align="center">LFSbook in Japanese <small>(lfsbookja)</small><br/><small>2024/07/18</small></h1>
+<h1 align="center">LFSbook in Japanese <small>(lfsbookja)</small><br/><small>2025/11/08</small></h1>
 <div align="right">l f s b o o k j a&nbsp;&nbsp;&nbsp;AT&nbsp;&nbsp;&nbsp;g m a i l&nbsp;&nbsp;&nbsp;DOT&nbsp;&nbsp;&nbsp;c o m</div>
 
 <h3>1. Contents</h3>
@@ -26,26 +26,26 @@
 <table border=0>
 
 <tr>
-<td>LFS 12.1</td><td>&nbsp;&nbsp;</td>
-<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
-<td><a href="12.1-ja/index.html">HTML</a> /
-<a href="download/lfsbookja-12.1.pdf">PDF</a> /
-<a href="12.1-ja/wget-list">wget-list</a> /
-<a href="12.1-ja/md5sums">md5sums</a></td>
+<td>LFS 12.4</td><td>&nbsp;&nbsp;</td>
+<td>2025/09/01</td><td>&nbsp;&nbsp;</td>
+<td><a href="12.4-ja/index.html">HTML</a> /
+<a href="download/lfsbookja-12.4.pdf">PDF</a> /
+<a href="12.4-ja/wget-list">wget-list</a> /
+<a href="12.4-ja/md5sums">md5sums</a></td>
 </tr>
 
 <tr>
-<td>LFS 12.1-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
-<td><a href="12.1-sysdja/index.html">HTML</a> /
-<a href="download/lfssysdja-12.1.pdf">PDF</a> /
-<a href="12.1-sysdja/wget-list">wget-list</a> /
-<a href="12.1-sysdja/md5sums">md5sums</a></td>
+<td>LFS 12.4-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2025/09/01</td><td>&nbsp;&nbsp;</td>
+<td><a href="12.4-sysdja/index.html">HTML</a> /
+<a href="download/lfssysdja-12.4.pdf">PDF</a> /
+<a href="12.4-sysdja/wget-list">wget-list</a> /
+<a href="12.4-sysdja/md5sums">md5sums</a></td>
 </tr>
 
 <tr>
-<td>LFS r12.0-333</td><td>&nbsp;&nbsp;</td>
-<td>2024/07/18</td><td>&nbsp;&nbsp;</td>
+<td>LFS r12.4-44</td><td>&nbsp;&nbsp;</td>
+<td>2025/11/08</td><td>&nbsp;&nbsp;</td>
 <td>
 <a href="git-ja/index.html">HTML</a> /
 <a href="download/lfsbookja-git.pdf">PDF</a> /
@@ -54,8 +54,8 @@
 </tr>
 
 <tr>
-<td>LFS r12.0-333-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2024/07/18</td><td>&nbsp;&nbsp;</td>
+<td>LFS r12.4-44-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2025/11/08</td><td>&nbsp;&nbsp;</td>
 <td>
 <a href="git-sysdja/index.html">HTML</a> /
 <a href="download/lfssysdja-git.pdf">PDF</a> /
@@ -68,43 +68,43 @@
 
 <table border=0>
 <tr>
-<td>LFS 12.1</td><td>&nbsp;&nbsp;</td>
-<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
+<td>LFS 12.4</td><td>&nbsp;&nbsp;</td>
+<td>2025/09/01</td><td>&nbsp;&nbsp;</td>
 <td>
-<a href="download/lfsbookja-12.1-html.tar.bz2"><tt>lfsbookja-12.1-html.tar.bz2</tt> (chunk version)</a>
+<a href="download/lfsbookja-12.4-html.tar.bz2"><tt>lfsbookja-12.4-html.tar.bz2</tt> (chunk version)</a>
 </td>
 </tr>
 <tr>
 <td></td><td>&nbsp;&nbsp;</td>
 <td></td><td>&nbsp;&nbsp;</td>
-<td><a href="download/lfsbookja-12.1-nochunks.html.bz2"><tt>lfsbookja-12.1-nochunks.html.bz2</tt> (nochunk version)</a></td>
+<td><a href="download/lfsbookja-12.4-nochunks.html.bz2"><tt>lfsbookja-12.4-nochunks.html.bz2</tt> (nochunk version)</a></td>
 </tr>
 <tr>
 <td></td><td>&nbsp;&nbsp;</td>
 <td></td><td>&nbsp;&nbsp;</td>
-<td><a href="download/lfsbookja-12.1.txt.bz2"><tt>lfsbookja-12.1.txt.bz2</tt></a></td>
+<td><a href="download/lfsbookja-12.4.txt.bz2"><tt>lfsbookja-12.4.txt.bz2</tt></a></td>
 </tr>
 <tr>
-<td>LFS 12.1-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
+<td>LFS 12.4-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2025/09/01</td><td>&nbsp;&nbsp;</td>
 <td>
-<a href="download/lfssysdja-12.1-html.tar.bz2"><tt>lfssysdja-12.1-html.tar.bz2</tt> (chunk version)</a>
+<a href="download/lfssysdja-12.4-html.tar.bz2"><tt>lfssysdja-12.4-html.tar.bz2</tt> (chunk version)</a>
 </td>
 </tr>
 <tr>
 <td></td><td>&nbsp;&nbsp;</td>
 <td></td><td>&nbsp;&nbsp;</td>
-<td><a href="download/lfssysdja-12.1-nochunks.html.bz2"><tt>lfssysdja-12.1-nochunks.html.bz2</tt> (nochunk version)</a></td>
+<td><a href="download/lfssysdja-12.4-nochunks.html.bz2"><tt>lfssysdja-12.4-nochunks.html.bz2</tt> (nochunk version)</a></td>
 </tr>
 <tr>
 <td></td><td>&nbsp;&nbsp;</td>
 <td></td><td>&nbsp;&nbsp;</td>
-<td><a href="download/lfssysdja-12.1.txt.bz2"><tt>lfssysdja-12.1.txt.bz2</tt></a></td>
+<td><a href="download/lfssysdja-12.4.txt.bz2"><tt>lfssysdja-12.4.txt.bz2</tt></a></td>
 </tr>
 
 <tr>
-<td>LFS r12.0-333</td><td>&nbsp;&nbsp;</td>
-<td>2024/07/18</td><td>&nbsp;&nbsp;</td>
+<td>LFS r12.4-44</td><td>&nbsp;&nbsp;</td>
+<td>2025/11/08</td><td>&nbsp;&nbsp;</td>
 <td>
 <a href="download/lfsbookja-git-html.tar.bz2"><tt>lfsbookja-git-html.tar.bz2</tt> (chunk version)</a>
 </td>
@@ -121,8 +121,8 @@
 </tr>
 
 <tr>
-<td>LFS r12.0-333-systemd</td><td>&nbsp;&nbsp;</td>
-<td>2024/07/18</td><td>&nbsp;&nbsp;</td>
+<td>LFS r12.4-44-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2025/11/08</td><td>&nbsp;&nbsp;</td>
 <td>
 <a href="download/lfssysdja-git-html.tar.bz2"><tt>lfssysdja-git-html.tar.bz2</tt> (chunk version)</a>
 </td>
@@ -139,18 +139,85 @@
 </tr>
 
 </table>
+
 <h4>1.3. Older Versions</h4>
 
 <table border=0>
 
 <tr>
+<td>LFS 12.3</td><td>&nbsp;&nbsp;</td>
+<td>2024/03/07</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.3-ja/">HTML</a> /
+<a href="download/lfsbookja-12.3.pdf">PDF</a> /
+<a href="download/lfsbookja-12.3-html.tar.bz2"><tt>lfsbookja-12.3-html.tar.bz2</tt></a> /
+<a href="download/lfsbookja-12.3.txt.bz2"><tt>lfsbookja-12.3.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
+<td>LFS 12.3-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2024/03/07</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.3-sysdja/">HTML</a> /
+<a href="download/lfssysdja-12.3.pdf">PDF</a> /
+<a href="download/lfssysdja-12.3-html.tar.bz2"><tt>lfssysdja-12.3-html.tar.bz2</tt></a> /
+<a href="download/lfssysdja-12.3.txt.bz2"><tt>lfssysdja-12.3.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
+<td>LFS 12.2</td><td>&nbsp;&nbsp;</td>
+<td>2024/09/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.2-ja/">HTML</a> /
+<a href="download/lfsbookja-12.2.pdf">PDF</a> /
+<a href="download/lfsbookja-12.2-html.tar.bz2"><tt>lfsbookja-12.2-html.tar.bz2</tt></a> /
+<a href="download/lfsbookja-12.2.txt.bz2"><tt>lfsbookja-12.2.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
+<td>LFS 12.2-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2024/09/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.2-sysdja/">HTML</a> /
+<a href="download/lfssysdja-12.2.pdf">PDF</a> /
+<a href="download/lfssysdja-12.2-html.tar.bz2"><tt>lfssysdja-12.2-html.tar.bz2</tt></a> /
+<a href="download/lfssysdja-12.2.txt.bz2"><tt>lfssysdja-12.2.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
+<td>LFS 12.1</td><td>&nbsp;&nbsp;</td>
+<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.1-ja/">HTML</a> /
+<a href="download/lfsbookja-12.1.pdf">PDF</a> /
+<a href="download/lfsbookja-12.1-html.tar.bz2"><tt>lfsbookja-12.1-html.tar.bz2</tt></a> /
+<a href="download/lfsbookja-12.1.txt.bz2"><tt>lfsbookja-12.1.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
+<td>LFS 12.1-systemd</td><td>&nbsp;&nbsp;</td>
+<td>2024/03/01</td><td>&nbsp;&nbsp;</td>
+<td>
+<a href="12.1-sysdja/">HTML</a> /
+<a href="download/lfssysdja-12.1.pdf">PDF</a> /
+<a href="download/lfssysdja-12.1-html.tar.bz2"><tt>lfssysdja-12.1-html.tar.bz2</tt></a> /
+<a href="download/lfssysdja-12.1.txt.bz2"><tt>lfssysdja-12.1.txt.bz2</tt></a>
+</td>
+</tr>
+
+<tr>
 <td>LFS 12.0</td><td>&nbsp;&nbsp;</td>
 <td>2023/09/01</td><td>&nbsp;&nbsp;</td>
 <td>
-<a href="http://lfsbookja.osdn.jp/12.0-ja/">HTML</a> /
-<a href="http://lfsbookja.osdn.jp/12.0-ja/lfsbookja-12.0.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/lfsbookja-12.0-html.tar.bz2"><tt>lfsbookja-12.0-html.tar.bz2</tt></a> /
-<a href="http://lfsbookja.osdn.jp/lfsbookja-12.0.txt.bz2"><tt>lfsbookja-12.0.txt.bz2</tt></a>
+<a href="12.0-ja/">HTML</a> /
+<a href="download/lfsbookja-12.0.pdf">PDF</a> /
+<a href="download/lfsbookja-12.0-html.tar.bz2"><tt>lfsbookja-12.0-html.tar.bz2</tt></a> /
+<a href="download/lfsbookja-12.0.txt.bz2"><tt>lfsbookja-12.0.txt.bz2</tt></a>
 </td>
 </tr>
 
@@ -158,10 +225,10 @@
 <td>LFS 12.0-systemd</td><td>&nbsp;&nbsp;</td>
 <td>2023/09/01</td><td>&nbsp;&nbsp;</td>
 <td>
-<a href="http://lfsbookja.osdn.jp/12.0-sysdja/">HTML</a> /
-<a href="http://lfsbookja.osdn.jp/12.0-sysdja/lfssysdja-12.0.pdf">PDF</a> /
-<a href="http://lfsbookja.osdn.jp/lfssysdja-12.0-html.tar.bz2"><tt>lfssysdja-12.0-html.tar.bz2</tt></a> /
-<a href="http://lfsbookja.osdn.jp/lfssysdja-12.0.txt.bz2"><tt>lfssysdja-12.0.txt.bz2</tt></a>
+<a href="12.0-sysdja/">HTML</a> /
+<a href="download/lfssysdja-12.0.pdf">PDF</a> /
+<a href="download/lfssysdja-12.0-html.tar.bz2"><tt>lfssysdja-12.0-html.tar.bz2</tt></a> /
+<a href="download/lfssysdja-12.0.txt.bz2"><tt>lfssysdja-12.0.txt.bz2</tt></a>
 </td>
 </tr>
 
